Fixed alignment of button

--- a/app/stylesheets/_main.scss
+++ b/app/stylesheets/_main.scss
@@ -23,9 +23,7 @@
 
 .btn-primary {
     display: block;
-    background: #eeeeff;
-    width: 50px;
-    height: 20px
+
 }
 
 .btn-primary-archive {
@@ -67,6 +65,12 @@ body {}
     width: 450px;
     float: right;
     margin-right: 100px;
+}
+
+.right-column-task {
+    width: 450px;
+    float: right;
+
 }
 
 .left-column {
